--- a/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
+++ b/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
@@ -17,6 +17,10 @@
             <i class="bi bi-sort-alpha-down"></i>
           </button>
           <div ngbDropdownMenu aria-labelledby="dropdownSortBy">
+            <button ngbDropdownItem (click)="onChangeSortBy('relevance',$event)"
+              [ngClass]="{'active': sortBy ==='relevance'}">
+              {{ t('relevance') }}
+            </button>
             <button ngbDropdownItem (click)="onChangeSortBy('name',$event)" [ngClass]="{'active': sortBy ==='name'}">
               {{ t('name') }}
             </button>
