--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -138,20 +138,47 @@
                     <i class="bi bi-download me-2"></i>
                     {{ t('export') }}
                   </button>
-                  <div ngbDropdownMenu aria-labelledby="dropdownExport">
-                    <a ngbDropdownItem type="button" class="btn btn-secondary" [href]="exportUrl+'?type=LACKEY'"
-                      target="_blank" gaEvent="export" gaCategory="lackey">Lackey</a>
-                    <a ngbDropdownItem type="button" class="btn btn-secondary" [href]="exportUrl+'?type=JOL'"
-                      target="_blank" gaEvent="export" gaCategory="jol">JOL</a>
-                    <a ngbDropdownItem type="button" class="btn btn-secondary" [href]="exportUrl+'?type=BCN_CRISIS'"
-                      target="_blank" gaEvent="export" gaCategory="bcnCrisis">BCN&nbsp;Crisis</a>
-                  </div>
-                </div>
-                <div class="col d-grid">
-                  <a type="button" class="btn btn-secondary" (click)="onCopyDeckToCLipboard()" target="_blank"
-                    gaEvent="click" gaCategory="clipboard">
-                    <i class="bi bi-clipboard me-2"></i><span>{{ t('clipboard') }}</span>
-                  </a>
+                  <ul ngbDropdownMenu aria-labelledby="dropdownExport">
+                    <li>
+                      <a ngbDropdownItem type="button" class="btn btn-secondary" [href]="exportUrl+'?type=LACKEY'"
+                        target="_blank" gaEvent="export" gaCategory="file_lackey">
+                        <i class="bi bi-file-earmark me-2"></i>{{ t('file') }} - Lackey
+                      </a>
+                    </li>
+                    <li>
+                      <a ngbDropdownItem type="button" class="btn btn-secondary" [href]="exportUrl+'?type=JOL'"
+                        target="_blank" gaEvent="export" gaCategory="file_jol">
+                        <i class="bi bi-file-earmark me-2"></i>{{ t('file') }} - JOL
+                      </a>
+                    </li>
+                    <li>
+                      <a ngbDropdownItem type="button" class="btn btn-secondary" [href]="exportUrl+'?type=TWD'"
+                        target="_blank" gaEvent="export" gaCategory="file_twd">
+                        <i class="bi bi-file-earmark me-2"></i>{{ t('file') }} - TWD
+                      </a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                      <a ngbDropdownItem type="button" class="btn btn-secondary" (click)="onCopyToClipboard('LACKEY')"
+                        gaEvent="export" gaCategory="clipboard_lackey">
+                        <i class="bi bi-clipboard me-2"></i>{{ t('clipboard') }} - Lackey
+                      </a>
+                    </li>
+                    <li>
+                      <a ngbDropdownItem type="button" class="btn btn-secondary" (click)="onCopyToClipboard('JOL')"
+                        gaEvent="export" gaCategory="clipboard_jol">
+                        <i class="bi bi-clipboard me-2"></i>{{ t('clipboard') }} - JOL
+                      </a>
+                    </li>
+                    <li>
+                      <a ngbDropdownItem type="button" class="btn btn-secondary" (click)="onCopyToClipboard('TWD')"
+                        gaEvent="export" gaCategory="clipboard_twd">
+                        <i class="bi bi-clipboard me-2"></i>{{ t('clipboard') }} - TWD
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
